# bleak

./: .clang-format  .gitignore  Bleakdepth.sln  Bleakdepth.vcxproj  Bleakdepth.vcxproj.filters  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  atlas.hpp  color.hpp  cursor.hpp  delta.hpp  glyph.hpp  keyboard.hpp  line.cpp  line.hpp  log.hpp  meson.build  module.wrap  mouse.hpp  native.ini  path.cpp  path.hpp  point.hpp  program.cpp  program.h  rect.hpp  renderer.hpp  sdl_cheatsheet.txt  steam_appid.txt  subsystem.hpp  texture.hpp  timer.hpp  typedef.hpp  window.hpp  windows.meson
bleak/: applicator.hpp  arc.hpp  area.hpp  array.hpp  atlas.hpp  bitdef.hpp  camera.hpp  cardinal.hpp  cell.hpp  circle.hpp  clock.hpp  color.hpp  concepts.hpp  constants.hpp  creeper.hpp  cursor.hpp  extent.hpp  field.hpp  gamepad.hpp  glyph.hpp  hash.hpp  input.hpp  iter.hpp  keyboard.hpp  line.hpp  log.hpp  lut.hpp  map.hpp  memory.hpp  mixer.hpp  mouse.hpp  music.hpp  octant.hpp  offset.hpp  path.hpp  primitive.hpp  primitive_types.hpp  quadrant.hpp  random.hpp  rect.hpp  (+17 more)
bleak/array/: array.hpp  array.tpp  iter.hpp  iter.tpp  layer.tpp  row.tpp  volume.tpp
bleak/constants/: bindings.hpp  characters.hpp  colors.hpp  glyphs.hpp  keys.hpp  numeric.hpp  octants.hpp
bleak/extent/: extent_1d.hpp  extent_2d.hpp  extent_3d.hpp
bleak/offset/: offset_1d.hpp  offset_2d.hpp  offset_3d.hpp
bleak/primitive/: line.hpp  point.hpp  rectangle.hpp
cross/: x86_64-linux.ini  x86_64-windows.ini
inc/: bleak.hpp  meson.build
inc/bleak/: applicator.hpp  arc.hpp  area.hpp  array.hpp  atlas.hpp  binarray.hpp  camera.hpp  cardinal.hpp  cell.hpp  circle.hpp  clip_pool.hpp  clock.hpp  color.hpp  concepts.hpp  constants.hpp  creeper.hpp  cursor.hpp  extent.hpp  field.hpp  gamepad.hpp  glyph.hpp  hash.hpp  input.hpp  keyboard.hpp  keyframe.hpp  leaf.hpp  line.hpp  log.hpp  lut.hpp  mixer.hpp  mouse.hpp  multi_sparse.hpp  music.hpp  octant.hpp  offset.hpp  path.hpp  primitive.hpp  primitive_types.hpp  priority_mutex.hpp  quadrant.hpp  (+21 more)
inc/bleak/array/: array_ct.hpp  array_rt.hpp
inc/bleak/constants/: bindings.hpp  characters.hpp  colors.hpp  enums.hpp  glyphs.hpp  indices.hpp  keys.hpp  numeric.hpp
inc/bleak/region/: common.hpp  region_ct.hpp  region_rt.hpp
inc/bleak/steam/: api.hpp  input.hpp  user.hpp  user_stats.hpp
inc/bleak/zone/: zone_ct.hpp  zone_rt.hpp
lib/: array.hpp  atlas.hpp  camera.hpp  cardinal.hpp  clock.hpp  color.hpp  coord.hpp  cursor.hpp  delta.hpp  gamepad.hpp  glyph.hpp  input.hpp  keyboard.hpp  line.hpp  log.hpp  lut.hpp  map.hpp  mouse.hpp  octant.hpp  path.hpp  point.hpp  rect.hpp  renderer.hpp  sprite.hpp  subsystem.hpp  text.hpp  texture.hpp  timer.hpp  tree.hpp  typedef.hpp  wave.hpp  window.hpp
lib/array/: iter.tpp  layer.tpp  row.tpp  volume.tpp
lib/constants/: bindings.hpp  characters.hpp  colors.hpp  glyphs.hpp  keys.hpp  octants.hpp
native/: windows.ini
res/: attribution.txt
res/maps/: test_region.map
src/: program.cpp  test.cpp  tests.hpp
src/bleakdepth/: game.hpp  game_state.hpp  globals.hpp
src/necrowarp/: command_parser.hpp  ecs.hpp  entities.hpp  entity_state.hpp  entity_state.tpp  game.hpp  game_state.hpp  globals.hpp  phase.hpp  ui.hpp  ui_state.hpp
src/necrowarp/ecs/: components.hpp  entities.hpp  systems.hpp
src/necrowarp/ecs/components/: animate.hpp  commands.hpp  inanimate.hpp  status.hpp
src/necrowarp/ecs/entities/: base.hpp  evil.hpp  good.hpp  inanimate.hpp
src/necrowarp/ecs/systems/: animate.hpp  base.hpp  evil.hpp  status.hpp
src/necrowarp/entities/: adventurer.hpp  adventurer.ipp  adventurer.tpp  entity.hpp  flesh_golem.hpp  flesh_golem.tpp  ladder.hpp  ladder.tpp  paladin.hpp  paladin.tpp  player.hpp  player.tpp  priest.hpp  priest.tpp  skeleton.hpp  skeleton.tpp  skull.hpp  skull.tpp  wraith.hpp  wraith.tpp
src/necrowarp/ui/: base.hpp  box.hpp  button.hpp  composite.hpp  label.hpp  status.hpp
tests/: array.cpp  memory.cpp  region.cpp  zone.cpp
